module(name = "prism", version = "4.9")

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "platforms", version = "1.0.0")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

git_repository(
    name = "cudd",
    remote = "https://github.com/prismmodelchecker/cudd.git",
    commit = "a92e66648f54b9da1fae166482f2459e163fc7d7",
    build_file = "prism/ext/cudd.BUILD.bazel",
    patches = ["prism/ext/cudd.patch"],
    patch_strip = 1,
)

http_archive(
    name = "lp_solve",
    url = "https://github.com/lp-solve/lp_solve/releases/download/5.5.2.14/lp_solve_5.5.2.14_source.tar.gz",
    sha256 = "a4bbdc881128bdbe920a38e134c9add5db47f9aa814a0a018ba940b0f3c278c3",
    strip_prefix = "lp_solve",
    build_file = "prism/ext/lp_solve.BUILD.bazel",
)

http_archive(
    name = "lp_solve_java",
    url = "https://github.com/lp-solve/lp_solve/releases/download/5.5.2.14/lp_solve_5.5.2.14_java.zip",
    sha256 = "79e23d4653c5f54b35b8c8a69f3d1bd277c2bf10cca1729834f240199c44b949",
    strip_prefix = "lp_solve_5.5_java",
    build_file = "prism/ext/lp_solve_java.BUILD.bazel",
    patches = ["prism/ext/lp_solve_java.patch"],
    patch_strip = 1,
)
