load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "prism_include",
    hdrs = glob(["include/*.h", "include/jni/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "prism_resources",
    srcs = glob(["images/*", "dtds/*"]),
    visibility = ["//visibility:public"],
)
