load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_java//java:defs.bzl", "java_library")

cc_library(
    name = "lpsolve55j_lib",
    srcs = glob(["src/c/*"]),
    deps = ["@lp_solve//:lpsolve55_lib", "@bazel_tools//tools/jdk:jni"],
    visibility = ["//visibility:public"],
)

java_library(
    name = "lpsolve55_java",
    srcs = glob(["src/java/lpsolve/*.java"]),
    visibility = ["//visibility:public"],
)
