load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@rules_java//java:defs.bzl", "java_binary")

cc_library(
    name = "dd_lib",
    srcs = glob(["dd/*.cc"]),
    deps = ["@cudd//:cudd", "//prism:prism_include"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "jdd_lib",
    srcs = glob(["jdd/*.cc"]),
    deps = ["@cudd//:cudd", "//prism:prism_include", "@bazel_tools//tools/jdk:jni"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "odd_lib",
    srcs = glob(["odd/*.cc"]),
    deps = ["@cudd//:cudd", "//prism:prism_include", "@bazel_tools//tools/jdk:jni"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dv_lib",
    srcs = glob(["dv/*.cc"]),
    deps = ["@cudd//:cudd", "//prism:prism_include", "@bazel_tools//tools/jdk:jni"],
    linkopts = ["-lm"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "prism_lib",
    srcs = glob(["prism/*.cc"]),
    deps = ["//prism:prism_include", "@bazel_tools//tools/jdk:jni"],
    linkopts = ["-lm"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "prismmtbdd_lib",
    srcs = glob(["mtbdd/*.cc"]),
    deps = ["@cudd//:cudd", "//prism:prism_include", "@bazel_tools//tools/jdk:jni"],
    linkopts = ["-lm"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "prismsparse_lib",
    srcs = glob(["sparse/*.cc"]),
    deps = ["@lp_solve//:lpsolve55_lib", "@cudd//:cudd", "//prism:prism_include", "@bazel_tools//tools/jdk:jni"],
    linkopts = ["-lm"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "prismhybrid_lib",
    srcs = glob(["hybrid/*.cc"]),
    deps = ["@cudd//:cudd", "//prism:prism_include", "@bazel_tools//tools/jdk:jni"],
    linkopts = ["-lm"],
    visibility = ["//visibility:public"],
)

java_library(
    name = "prism",
    srcs = glob(["**/*.java"]),
    deps = [
        "//prism/lib:prism_jars",
        "@lp_solve_java//:lpsolve55_java",
    ],
    resources = ["//prism:prism_resources"],
    resource_strip_prefix = "prism",
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
)
